conf/02-whoami-udp-svc.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiudp
  namespace: default
  labels:
    app: containous
    name: whoamiudp

spec:
  replicas: 2
  selector:
    matchLabels:
      app: containous
      task: whoamiudp
  template:
    metadata:
      labels:
        app: containous
        task: whoamiudp
    spec:
      containers:
        - name: containouswhoamiudp
          image: containous/whoamiudp:dev
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: whoamiudp
  namespace: default

spec:
  ports:
    - name: fooudp
      port: 8080
  selector:
    app: containous
    task: whoamiudp
