conf/03-ingressroute-tcp.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute.tcp
spec:
  entryPoints:
    - web
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: whoamitcp
          port: 8080
